[package]
name = "terramach"
version = "0.1.0"
authors = ["Volodymyr Lykhonis <vladimirlichonos@gmail.com>"]
edition = "2018"

[dependencies.terramach-graphics]
path = "graphics"

[dependencies.terramach-support]
path = "support"

[dependencies]
seahash = "3.0.6"
time-point = "0.1.1"
lazy_static = "1.4.0"
flagset = "0.3.0"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-foundation = "0.7.0"
core-graphics = "0.19.0"
display-link = "0.2.0"
objc = "0.2.7"
objc_id = "0.1.1"
objc-foundation = "0.1.1"
