[package]
name = "terramach"
version = "0.1.0"
authors = ["Volodymyr Lykhonis <vladimirlichonos@gmail.com>"]
edition = "2018"

[features]
default = []

[dependencies]
terramach-support = { path = "support" }
terramach-graphics = { path = "graphics" }
flagset = "0.3.0"
time-point = "0.1.1"
lazy_static = "1.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
glfw = "0.34.0"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-foundation = "0.7.0"
core-graphics = "0.19.0"
display-link = "0.2.0"
objc = "0.2.7"
objc_id = "0.1.1"
objc-foundation = "0.1.1"
